Changelog
---------

    - (1.3.0)
        - PR#25, Issue#24: Support reading images from stream. Added dependency on ImageIO.
        - Tesseract forced to use legacy mode by default (as it seems to work better than the LSTM one).
    
	- (1.2.4) PR#22: Extra command line parameters for Tesseract
	- (1.2.3) Issue #21: Added correct sklearn version requirement.
	- (1.2.2) PR#18: fixed skimage warnings
    - (1.2.1)
        - PR#12: Validate date format and validity as an additional check on top of the check digit
        - PR#15: debugging '--psm' syntax for tesseract 4
        - PR#18: fixed skimage warnings
    - (1.2.0) Pinned PyTesseract version to >= 0.2.0

    - (1.1.2) Issue #9, PR#10: Pinned PyTesseract version to 0.1.7 (newer ones are incompatible)
    - (1.1.1)
        - Minor packaging fixes
        - PR#2 (https://github.com/konstantint/PassportEye/pull/2)
        - Support for Python 3 (Issue #1)
        - Issue #8 (https://github.com/konstantint/PassportEye/issues/8)
    
    - (1.0.0) Initial version, includes:
        - Dataflow pipeline-based processing
        - ROI detection using morphological operations ("Boone transform")
        - ROI represented as a rotated box, extracted from contours via PCA.
        - OCR via Google Tesseract. OCR is attempted via several filters.
        - mrz command line tool.
        - evaluate_mrz command line tool